# photo_contest

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  config.py  database.py  domain.py  entrypoint.py  image_utils.py  main.py  models.py  repositories.py  storage.py
app/routers/: admin.py  presentation.py  public.py  tasks.py
app/services/: contest.py  judging_jobs.py  providers.py
app/static/: styles.css
app/templates/: admin.html  admin_guest_edit.html  admin_guests.html  admin_nav.html  admin_operations.html  base.html  base_guest.html  entry_category.html  entry_home.html  index.html  join.html  presentation.html
docs/: cloud-run.md  gcp-setup.md  gemini-test-plan.md  handoff-2026-03-28.md  remaining-tasks.md  runbook.md
scripts/: load_test_dataset.py  seed_demo.py
